WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128588
querySelector() does not use the compiler correctly
https://bugs.webkit.org/show_bug.cgi?id=128588
Summary
querySelector() does not use the compiler correctly
Benjamin Poulain
Reported
2014-02-11 01:30:47 PST
querySelector() does not use the compiler correctly
Attachments
Patch
(1.70 KB, patch)
2014-02-11 01:32 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-02-11 01:32:58 PST
Created
attachment 223826
[details]
Patch
WebKit Commit Bot
Comment 2
2014-02-11 02:16:12 PST
Comment on
attachment 223826
[details]
Patch Clearing flags on attachment: 223826 Committed
r163872
: <
http://trac.webkit.org/changeset/163872
>
WebKit Commit Bot
Comment 3
2014-02-11 02:16:17 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug