querySelector() does not use the compiler correctly https://bugs.webkit.org/show_bug.cgi?id=128588

Reviewed by Andreas Kling.

* dom/SelectorQuery.cpp:
(WebCore::SelectorDataList::execute):
I messed up the refactoring when I landed SelectorQuery. The compiled
code was not used the first time through SelectorDataList::execute.


Canonical link: https://commits.webkit.org/146623@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163872 268f45cc-cd09-0410-ab3c-d52691b4dbfc